// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`crafty-preset-typescript > Lints TypeScript using the command 1`] = `
{
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/lints/js/Component.ts
  1:1  error  Replace \`⏎export·function·test(a:\` with \`export·function·test(a:·\`  @swissquote/swissquote/prettier/prettier
  3:1  error  Replace \`···return·a·+···\` with \`··return·a·+\`                      @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/lints/js/SomeLibrary.ts
   1:1  error  Delete \`⏎\`                                            @swissquote/swissquote/prettier/prettier
   5:4  error  Insert \`;\`                                            @swissquote/swissquote/prettier/prettier
   9:1  error  Delete \`··\`                                           @swissquote/swissquote/prettier/prettier
  10:1  error  Delete \`····\`                                         @swissquote/swissquote/prettier/prettier
  11:3  error  Delete \`··\`                                           @swissquote/swissquote/prettier/prettier
  13:1  error  Delete \`··\`                                           @swissquote/swissquote/prettier/prettier
  14:3  error  Insert \`··\`                                           @swissquote/swissquote/prettier/prettier
  15:1  error  Replace \`····\` with \`··\`                              @swissquote/swissquote/prettier/prettier
  17:1  error  Replace \`····divide(a,·b)⏎···\` with \`··divide(a,·b)\`  @swissquote/swissquote/prettier/prettier
  19:1  error  Replace \`········\` with \`····\`                        @swissquote/swissquote/prettier/prettier
  20:1  error  Delete \`····\`                                         @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/lints/js/script.ts
   1:1   error    Replace \`⏎import·{\` with \`import·{·\`         @swissquote/swissquote/prettier/prettier
   6:3   error    Replace \`··constructor·\` with \`constructor\`  @swissquote/swissquote/prettier/prettier
   7:5   warning  Unexpected console statement                 no-console
   8:2   error    Insert \`·\`                                   @swissquote/swissquote/prettier/prettier
  11:5   warning  Unexpected console statement                 no-console
  11:17  error    Replace \`·test(·\` with \`test(\`               @swissquote/swissquote/prettier/prettier
  13:16  error    Replace \`·(·)·=>⏎···\` with \`()·=>\`           @swissquote/swissquote/prettier/prettier
  17:7   warning  Unexpected console statement                 no-console
  18:6   error    Replace \`·,·300)\` with \`,·300);\`             @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/lints/js/utils.ts
   7:3   warning  Unexpected console statement                                                                                                                                                                  no-console
  20:7   error    Unexpected constant binary expression. Compares constantly with the right-hand side of the \`===\`                                                                                              no-constant-binary-expression
  20:25  error    Invalid typeof comparison value                                                                                                                                                               valid-typeof
  29:10  error    React Hook "useSWROrig" is called conditionally. React Hooks must be called in the exact same order in every component render. Did you accidentally call a React Hook after an early return?  @swissquote/swissquote/react-hooks/rules-of-hooks
  34:25  error    Expected '===' and instead saw '=='                                                                                                                                                           eqeqeq
  35:16  error    Redundant use of \`await\` on a return value                                                                                                                                                    no-return-await

✖ 28 problems (24 errors, 4 warnings)
  19 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;

exports[`crafty-preset-typescript > Lints TypeScript using the command, --preset format 1`] = `
{
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/lints/js/Component.ts
  1:1  error  Replace \`⏎export·function·test(a:\` with \`export·function·test(a:·\`  @swissquote/swissquote/prettier/prettier
  3:1  error  Replace \`···return·a·+···\` with \`··return·a·+\`                      @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/lints/js/SomeLibrary.ts
   1:1  error  Delete \`⏎\`                                            @swissquote/swissquote/prettier/prettier
   5:4  error  Insert \`;\`                                            @swissquote/swissquote/prettier/prettier
   9:1  error  Delete \`··\`                                           @swissquote/swissquote/prettier/prettier
  10:1  error  Delete \`····\`                                         @swissquote/swissquote/prettier/prettier
  11:3  error  Delete \`··\`                                           @swissquote/swissquote/prettier/prettier
  13:1  error  Delete \`··\`                                           @swissquote/swissquote/prettier/prettier
  14:3  error  Insert \`··\`                                           @swissquote/swissquote/prettier/prettier
  15:1  error  Replace \`····\` with \`··\`                              @swissquote/swissquote/prettier/prettier
  17:1  error  Replace \`····divide(a,·b)⏎···\` with \`··divide(a,·b)\`  @swissquote/swissquote/prettier/prettier
  19:1  error  Replace \`········\` with \`····\`                        @swissquote/swissquote/prettier/prettier
  20:1  error  Delete \`····\`                                         @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/lints/js/script.ts
   1:1   error  Replace \`⏎import·{\` with \`import·{·\`         @swissquote/swissquote/prettier/prettier
   6:3   error  Replace \`··constructor·\` with \`constructor\`  @swissquote/swissquote/prettier/prettier
   8:2   error  Insert \`·\`                                   @swissquote/swissquote/prettier/prettier
  11:17  error  Replace \`·test(·\` with \`test(\`               @swissquote/swissquote/prettier/prettier
  13:16  error  Replace \`·(·)·=>⏎···\` with \`()·=>\`           @swissquote/swissquote/prettier/prettier
  18:6   error  Replace \`·,·300)\` with \`,·300);\`             @swissquote/swissquote/prettier/prettier

✖ 19 problems (19 errors, 0 warnings)
  19 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;

exports[`crafty-preset-typescript > Lints TypeScript using the command, --preset recommended 1`] = `
{
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/lints/js/Component.ts
  1:1  error  Replace \`⏎export·function·test(a:\` with \`export·function·test(a:·\`  @swissquote/swissquote/prettier/prettier
  3:1  error  Replace \`···return·a·+···\` with \`··return·a·+\`                      @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/lints/js/SomeLibrary.ts
   1:1  error  Delete \`⏎\`                                            @swissquote/swissquote/prettier/prettier
   5:4  error  Insert \`;\`                                            @swissquote/swissquote/prettier/prettier
   9:1  error  Delete \`··\`                                           @swissquote/swissquote/prettier/prettier
  10:1  error  Delete \`····\`                                         @swissquote/swissquote/prettier/prettier
  11:3  error  Delete \`··\`                                           @swissquote/swissquote/prettier/prettier
  13:1  error  Delete \`··\`                                           @swissquote/swissquote/prettier/prettier
  14:3  error  Insert \`··\`                                           @swissquote/swissquote/prettier/prettier
  15:1  error  Replace \`····\` with \`··\`                              @swissquote/swissquote/prettier/prettier
  17:1  error  Replace \`····divide(a,·b)⏎···\` with \`··divide(a,·b)\`  @swissquote/swissquote/prettier/prettier
  19:1  error  Replace \`········\` with \`····\`                        @swissquote/swissquote/prettier/prettier
  20:1  error  Delete \`····\`                                         @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/lints/js/script.ts
   1:1   error    Replace \`⏎import·{\` with \`import·{·\`         @swissquote/swissquote/prettier/prettier
   6:3   error    Replace \`··constructor·\` with \`constructor\`  @swissquote/swissquote/prettier/prettier
   7:5   warning  Unexpected console statement                 no-console
   8:2   error    Insert \`·\`                                   @swissquote/swissquote/prettier/prettier
  11:5   warning  Unexpected console statement                 no-console
  11:17  error    Replace \`·test(·\` with \`test(\`               @swissquote/swissquote/prettier/prettier
  13:16  error    Replace \`·(·)·=>⏎···\` with \`()·=>\`           @swissquote/swissquote/prettier/prettier
  17:7   warning  Unexpected console statement                 no-console
  18:6   error    Replace \`·,·300)\` with \`,·300);\`             @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/lints/js/utils.ts
   7:3   warning  Unexpected console statement                                                                                                                                                                  no-console
  20:7   error    Unexpected constant binary expression. Compares constantly with the right-hand side of the \`===\`                                                                                              no-constant-binary-expression
  20:25  error    Invalid typeof comparison value                                                                                                                                                               valid-typeof
  29:10  error    React Hook "useSWROrig" is called conditionally. React Hooks must be called in the exact same order in every component render. Did you accidentally call a React Hook after an early return?  @swissquote/swissquote/react-hooks/rules-of-hooks
  34:25  error    Expected '===' and instead saw '=='                                                                                                                                                           eqeqeq
  35:16  error    Redundant use of \`await\` on a return value                                                                                                                                                    no-return-await

✖ 28 problems (24 errors, 4 warnings)
  19 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;

exports[`crafty-preset-typescript > Lints TypeScript using the command, --preset recommended, --preset node 1`] = `
{
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/lints/js/Component.ts
  1:1  error  Replace \`⏎export·function·test(a:\` with \`export·function·test(a:·\`  @swissquote/swissquote/prettier/prettier
  3:1  error  Replace \`···return·a·+···\` with \`··return·a·+\`                      @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/lints/js/SomeLibrary.ts
   1:1  error  Delete \`⏎\`                                            @swissquote/swissquote/prettier/prettier
   5:4  error  Insert \`;\`                                            @swissquote/swissquote/prettier/prettier
   9:1  error  Delete \`··\`                                           @swissquote/swissquote/prettier/prettier
  10:1  error  Delete \`····\`                                         @swissquote/swissquote/prettier/prettier
  11:3  error  Delete \`··\`                                           @swissquote/swissquote/prettier/prettier
  13:1  error  Delete \`··\`                                           @swissquote/swissquote/prettier/prettier
  14:3  error  Insert \`··\`                                           @swissquote/swissquote/prettier/prettier
  15:1  error  Replace \`····\` with \`··\`                              @swissquote/swissquote/prettier/prettier
  17:1  error  Replace \`····divide(a,·b)⏎···\` with \`··divide(a,·b)\`  @swissquote/swissquote/prettier/prettier
  19:1  error  Replace \`········\` with \`····\`                        @swissquote/swissquote/prettier/prettier
  20:1  error  Delete \`····\`                                         @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/lints/js/script.ts
   1:1   error  Replace \`⏎import·{\` with \`import·{·\`         @swissquote/swissquote/prettier/prettier
   6:3   error  Replace \`··constructor·\` with \`constructor\`  @swissquote/swissquote/prettier/prettier
   8:2   error  Insert \`·\`                                   @swissquote/swissquote/prettier/prettier
  11:17  error  Replace \`·test(·\` with \`test(\`               @swissquote/swissquote/prettier/prettier
  13:16  error  Replace \`·(·)·=>⏎···\` with \`()·=>\`           @swissquote/swissquote/prettier/prettier
  18:6   error  Replace \`·,·300)\` with \`,·300);\`             @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/lints/js/utils.ts
  20:7   error  Unexpected constant binary expression. Compares constantly with the right-hand side of the \`===\`                                                                                              no-constant-binary-expression
  20:25  error  Invalid typeof comparison value                                                                                                                                                               valid-typeof
  29:10  error  React Hook "useSWROrig" is called conditionally. React Hooks must be called in the exact same order in every component render. Did you accidentally call a React Hook after an early return?  @swissquote/swissquote/react-hooks/rules-of-hooks
  34:25  error  Expected '===' and instead saw '=='                                                                                                                                                           eqeqeq
  35:16  error  Redundant use of \`await\` on a return value                                                                                                                                                    no-return-await

✖ 24 problems (24 errors, 0 warnings)
  19 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;

exports[`crafty-preset-typescript > Tests Syntax using Prettier 1 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/test-ts-syntax_prettier1/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_webpack' ...
asset webpack.min.js ___ KiB [emitted] [minimized] (name: default)
  sourceMap webpack.min.js.map ___ KiB [emitted] [dev] (auxiliary name: default)
asset js/TS_4_0.d.ts ___ KiB [emitted]
asset js/app.d.ts ___ KiB [emitted]
asset js/TS_4_2.d.ts ___ KiB [emitted]
Entrypoint default ___ KiB (___ KiB) = webpack.min.js 1 auxiliary asset
chunk (runtime: default) webpack.min.js (default) ___ KiB (javascript) ___ KiB (runtime) [entry] [rendered]
  runtime modules ___ KiB 3 modules
  ./js/app.ts + 2 modules ___ KiB [built] [code generated]

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_webpack' after ____ ms
[__:__:__] Starting 'js_gulp' ...
[__:__:__] Finished 'js_gulp' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`crafty-preset-typescript > Tests Syntax using Prettier 2 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/test-ts-syntax_prettier2/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_webpack' ...
assets by path js/*.ts ___ KiB
  asset js/app.d.ts ___ KiB [emitted]
  asset js/TS_4_3.d.ts ___ KiB [emitted]
  asset js/TS_4_1.d.ts ___ KiB [emitted]
  asset js/TS_4_5.d.ts ___ KiB [emitted]
  asset js/TS_4_0.d.ts ___ KiB [emitted]
  asset js/TS_5_0.d.ts ___ KiB [emitted]
  asset js/TS_4_9.d.ts ___ KiB [emitted]
  asset js/TS_4_6.d.ts ___ KiB [emitted]
  asset js/TS_4_2.d.ts ___ KiB [emitted]
  asset js/TS_4_8.d.ts ___ KiB [emitted]
  + 2 assets
asset webpack.min.js ___ KiB [emitted] [minimized] (name: default)
  sourceMap webpack.min.js.map ___ KiB [emitted] [dev] (auxiliary name: default)
asset js/TS_4_7.d.mts ___ KiB [emitted]
asset js/TS_4_7_common.d.cts ___ KiB [emitted]
Entrypoint default ___ KiB (___ KiB) = webpack.min.js 1 auxiliary asset
chunk (runtime: default) webpack.min.js (default) ___ KiB (javascript) ___ KiB (runtime) [entry] [rendered]
  runtime modules ___ KiB 3 modules
  dependent modules ___ KiB [dependent] 1 module
  ./js/app.ts + 13 modules ___ KiB [built] [code generated]

  Compiled with warnings.

[eslint]
__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/test-ts-syntax_prettier2/js/TS_4_8.ts
  2:34  warning  The \`{}\` ("empty object") type allows any non-nullish value, including literals like \`0\` and \`""\`.
- If that's what you want, disable this lint rule with an inline comment or configure the 'allowObjectTypes' rule option.
- If you want a type meaning "any object", you probably want \`object\` instead.
- If you want a type meaning "any value", you probably want \`unknown\` instead  @swissquote/swissquote/@typescript-eslint/no-empty-object-type

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/test-ts-syntax_prettier2/js/TS_5_0.ts
  14:5  warning  Unexpected console statement  no-console
  16:5  warning  Unexpected console statement  no-console
  32:5  warning  Unexpected console statement  no-console

✖ 4 problems (0 errors, 4 warnings)

  Δt ____ms ⚠  1 problem (0 errors, 1 warning)

[__:__:__] Finished 'js_webpack' after ____ ms
[__:__:__] Starting 'js_gulp' ...
[__:__:__]
__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/test-ts-syntax_prettier2/js/TS_4_8.ts
  2:34  warning  The \`{}\` ("empty object") type allows any non-nullish value, including literals like \`0\` and \`""\`.
- If that's what you want, disable this lint rule with an inline comment or configure the 'allowObjectTypes' rule option.
- If you want a type meaning "any object", you probably want \`object\` instead.
- If you want a type meaning "any value", you probably want \`unknown\` instead  @swissquote/swissquote/@typescript-eslint/no-empty-object-type

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/test-ts-syntax_prettier2/js/TS_5_0.ts
  14:5  warning  Unexpected console statement  no-console
  16:5  warning  Unexpected console statement  no-console
  32:5  warning  Unexpected console statement  no-console

✖ 4 problems (0 errors, 4 warnings)

[__:__:__] Finished 'js_gulp' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`crafty-preset-typescript > Tests Syntax using Prettier 3 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/test-ts-syntax_prettier3/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_webpack' ...
assets by path js/*.ts ___ KiB
  asset js/app.d.ts ___ KiB [emitted]
  asset js/TS_4_3.d.ts ___ KiB [emitted]
  asset js/TS_4_1.d.ts ___ KiB [emitted]
  asset js/TS_4_5.d.ts ___ KiB [emitted]
  asset js/TS_4_0.d.ts ___ KiB [emitted]
  asset js/TS_5_0.d.ts ___ KiB [emitted]
  asset js/TS_4_9.d.ts ___ KiB [emitted]
  asset js/TS_4_6.d.ts ___ KiB [emitted]
  asset js/TS_4_2.d.ts ___ KiB [emitted]
  asset js/TS_4_8.d.ts ___ KiB [emitted]
  + 9 assets
asset webpack.min.js ___ KiB [emitted] [minimized] (name: default)
  sourceMap webpack.min.js.map ___ KiB [emitted] [dev] (auxiliary name: default)
asset js/TS_4_7.d.mts ___ KiB [emitted]
asset js/TS_4_7_common.d.cts ___ KiB [emitted]
Entrypoint default ___ KiB (___ KiB) = webpack.min.js 1 auxiliary asset
chunk (runtime: default) webpack.min.js (default) ___ KiB (javascript) ___ KiB (runtime) [entry] [rendered]
  runtime modules ___ KiB 3 modules
  dependent modules ___ KiB [dependent] 1 module
  ./js/app.ts + 23 modules ___ KiB [built] [code generated]

  Compiled with warnings.

[eslint]
__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/test-ts-syntax_prettier3/js/TS_4_8.ts
  2:34  warning  The \`{}\` ("empty object") type allows any non-nullish value, including literals like \`0\` and \`""\`.
- If that's what you want, disable this lint rule with an inline comment or configure the 'allowObjectTypes' rule option.
- If you want a type meaning "any object", you probably want \`object\` instead.
- If you want a type meaning "any value", you probably want \`unknown\` instead  @swissquote/swissquote/@typescript-eslint/no-empty-object-type

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/test-ts-syntax_prettier3/js/TS_5_0.ts
  14:5  warning  Unexpected console statement  no-console
  16:5  warning  Unexpected console statement  no-console
  32:5  warning  Unexpected console statement  no-console

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/test-ts-syntax_prettier3/js/TS_5_2.ts
  10:5  warning  Unexpected console statement  no-console
  17:3  warning  Unexpected console statement  no-console

✖ 6 problems (0 errors, 6 warnings)

  Δt ____ms ⚠  1 problem (0 errors, 1 warning)

[__:__:__] Finished 'js_webpack' after ____ ms
[__:__:__] Starting 'js_gulp' ...
[__:__:__]
__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/test-ts-syntax_prettier3/js/TS_4_8.ts
  2:34  warning  The \`{}\` ("empty object") type allows any non-nullish value, including literals like \`0\` and \`""\`.
- If that's what you want, disable this lint rule with an inline comment or configure the 'allowObjectTypes' rule option.
- If you want a type meaning "any object", you probably want \`object\` instead.
- If you want a type meaning "any value", you probably want \`unknown\` instead  @swissquote/swissquote/@typescript-eslint/no-empty-object-type

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/test-ts-syntax_prettier3/js/TS_5_0.ts
  14:5  warning  Unexpected console statement  no-console
  16:5  warning  Unexpected console statement  no-console
  32:5  warning  Unexpected console statement  no-console

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-typescript/test-ts-syntax_prettier3/js/TS_5_2.ts
  10:5  warning  Unexpected console statement  no-console
  17:3  warning  Unexpected console statement  no-console

✖ 6 problems (0 errors, 6 warnings)

[__:__:__] Finished 'js_gulp' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;
